--- a/xpi/locale/uk/options.dtd
+++ b/xpi/locale/uk/options.dtd
@@ -1,7 +1,7 @@
 <!ENTITY % brandDTD
-    SYSTEM "chrome://classic_theme_restorer/content/overlay_bname.dtd">
+    SYSTEM "chrome://classic_theme_restorer/content/overlay.dtd">
   %brandDTD;
-<!-- Do not edit above this line and do not edit the variable '&browserName;' inside translated strings -->
+<!-- Do not edit above this line and do not edit the variable '&brandShortName;' inside translated strings -->
 
 <!ENTITY Ctr_title			"Classic Theme Restorer">
 
@@ -14,7 +14,7 @@
 <!ENTITY Ctr_navthrobber	"Індикатор активності">
 <!ENTITY Ctr_sidebarbutton	"Бокова панель">
 <!ENTITY Ctr_windowcontrols	"мін/макс/закрити (Повний екран)">
-<!ENTITY Ctr_rr				"Перезапустіть &browserName;!">
+<!ENTITY Ctr_rr				"Перезапустіть &brandShortName;!">
 
 <!ENTITY Ctr_cuibuttons		"Кнопки">
 <!ENTITY Ctr_cuibutnormal	"Нормальні">
@@ -43,7 +43,7 @@
 <!ENTITY Ctr_tabsontop3		"Вкладки не нагорі (v2) --- встановлено [tabsontop=false]">
 <!ENTITY Ctr_tabsontopW1	"v2 - тільки для деяких додатків і повних тем!">
 <!ENTITY Ctr_tabsontopI1	"Додає атрибут [tabsontop=true/false] для">
-<!ENTITY Ctr_tabsintitlebar	"Панель заголовку &browserName; (about:config preference)">
+<!ENTITY Ctr_tabsintitlebar	"Панель заголовку &brandShortName; (about:config preference)">
 <!ENTITY Ctr_tabwidthdef	"(типово)">
 <!ENTITY Ctr_tabwidthcla	"(класичний)">
 <!ENTITY Ctr_tabminheight	"Висота:">
@@ -75,9 +75,9 @@
 <!ENTITY Ctr_appbutton0		"Кнопка вимкнена">
 <!ENTITY Ctr_appbutton1		"Кнопка на панелі">
 <!ENTITY Ctr_appbutton1wt	"Кнопка на панелі (тільки текст)">
-<!ENTITY Ctr_appbutton2		"Кнопка на [&browserName;] панелі заголовку">
-<!ENTITY Ctr_appbutton2h	"Кнопка на [&browserName;] панелі заголовку (прихована)">
-<!ENTITY Ctr_appbutton2io	"Кнопка на [&browserName;] панелі заголовку (тільки іконка)">
+<!ENTITY Ctr_appbutton2		"Кнопка на [&brandShortName;] панелі заголовку">
+<!ENTITY Ctr_appbutton2h	"Кнопка на [&brandShortName;] панелі заголовку (прихована)">
+<!ENTITY Ctr_appbutton2io	"Кнопка на [&brandShortName;] панелі заголовку (тільки іконка)">
 <!ENTITY Ctr_paneluibtweak	"Оранжева кнопка меню на панелі вкладок">
 <!ENTITY Ctr_appbuttonc_o	"Оранжева кнопка (типово)">
 <!ENTITY Ctr_appbuttonc_a	"Синя кнопка (Aurora)">
@@ -91,7 +91,7 @@
 <!ENTITY Ctr_appbuttonc_wh	"Біла кнопка">
 <!ENTITY Ctr_appbuttonc_cu	"Вибрати колір кнопки">
 <!ENTITY Ctr_appbuttonI1	"рекомендовано перезапуск">
-<!ENTITY Ctr_appbuttonI1e	"Не видно в рядку заголовку Windows OS, тільки в &browserName; заголовку!">
+<!ENTITY Ctr_appbuttonI1e	"Не видно в рядку заголовку Windows OS, тільки в &brandShortName; заголовку!">
 <!ENTITY Ctr_appbuttonI2	"Кольори кнопок видимі тільки на панелях заголовку і вкладок!">
 <!ENTITY Ctr_alttbappb		"Альтернативні іконки">
 <!ENTITY Ctr_appbutmhi		"Вища позиція (якщо на панелі вкладок)">
@@ -144,7 +144,7 @@
 <!ENTITY Ctr_pmhidelabels	"Спливаюче вікно панелі меню: приховати написи на кнопках">
 <!ENTITY Ctr_menupopupscr	"Спливаючі вікна меню: показувати полоси прокручування замість стрілки прокручування">
 
-<!ENTITY Ctr_fxmockup		"&browserName; макет">
+<!ENTITY Ctr_fxmockup		"&brandShortName; макет">
 <!ENTITY Ctr_tabmokcolor	"Білий колір для кнопок вкладок (закрити, нова, групи, список усіх)">
 <!ENTITY Ctr_tabmokcolor2	"Білий колір і темна тінь для тексту на неактивній вкладці">
 <!ENTITY Ctr_tabmokcolor3	"Білий колір для розділювачів вкладок">
@@ -196,7 +196,7 @@
 <!ENTITY Ctr_extrabar		"Додаткові панелі інструментів">
 <!ENTITY Ctr_extrabar0		"Додаткова панель(і)">
 <!ENTITY Ctr_extrabar1		"Додаткова панель">
-<!ENTITY Ctr_extrabarinfo	"Перемикання між способами «вкладки нагорі» і «вкладки не нагорі» змінює розташування додаткових панелей. &browserName; повинен бути перезапущений, щоб вирішити цю проблему.">
+<!ENTITY Ctr_extrabarinfo	"Перемикання між способами «вкладки нагорі» і «вкладки не нагорі» змінює розташування додаткових панелей. &brandShortName; повинен бути перезапущений, щоб вирішити цю проблему.">
 
 <!ENTITY Ctr_invicons		"Інвертовані іконки">
 <!ENTITY Ctr_menubar		"Панель меню">
@@ -220,7 +220,7 @@
 <!ENTITY Ctr_alttabstb2		"У розширеному режимі (вкладки нагорі)">
 
 <!ENTITY Ctr_altmenubar		"Додати колір тла (рядок заголовку Windows)">
-<!ENTITY Ctr_altmenubarpos	"Альтернативна позиція (нижче рядку заголовку &browserName;)">
+<!ENTITY Ctr_altmenubarpos	"Альтернативна позиція (нижче рядку заголовку &brandShortName;)">
 <!ENTITY Ctr_menubarnofog	"Прибрати затуманення/колір тла (Windows AeroGlass/8)">
 
 <!ENTITY Ctr_aerocolors		"Кольори Blue Aero для основних панелей і вкладок">
@@ -257,11 +257,11 @@
 <!ENTITY Ctr_nodevtheme		"Запобігти увімкненню «Теми розробника»">
 
 <!ENTITY Ctr_experttweaks	"Розширені опції">
-<!ENTITY Ctr_fx33layers		"В &browserName; 33+ введено «нові візуальні особливості», які в даний час відповідають за «зависання» вкладок на деяких системах. Вимкнення цього параметра вирішує цю проблему.">
-<!ENTITY Ctr_fx34search		"В &browserName; 34+ введено «новий пошуковий інтерфейс». Вимкнення цього параметра поверне  «старий пошуковий інтерфейс».">
-<!ENTITY Ctr_fx34loop		"В &browserName; 34+ введені особливості «виклику та сеансу зв’язку». Вимкнення цього параметру видалить їх.">
-<!ENTITY Ctr_fx35devtheme	"В &browserName; 35+ введено нову «тему» від розробника. Вимкнення цих налаштувань вимикає цю «тему» і її кнопку в ручному режимі налаштувань.">
-<!ENTITY Ctr_fx36prefs		"В &browserName; 36+ введено нове налаштування у вкладці. Вимкнення цього пункту відновлює вікно зі старими налаштуванням.">
+<!ENTITY Ctr_fx33layers		"В &brandShortName; 33+ введено «нові візуальні особливості», які в даний час відповідають за «зависання» вкладок на деяких системах. Вимкнення цього параметра вирішує цю проблему.">
+<!ENTITY Ctr_fx34search		"В &brandShortName; 34+ введено «новий пошуковий інтерфейс». Вимкнення цього параметра поверне  «старий пошуковий інтерфейс».">
+<!ENTITY Ctr_fx34loop		"В &brandShortName; 34+ введені особливості «виклику та сеансу зв’язку». Вимкнення цього параметру видалить їх.">
+<!ENTITY Ctr_fx35devtheme	"В &brandShortName; 35+ введено нову «тему» від розробника. Вимкнення цих налаштувань вимикає цю «тему» і її кнопку в ручному режимі налаштувань.">
+<!ENTITY Ctr_fx36prefs		"В &brandShortName; 36+ введено нове налаштування у вкладці. Вимкнення цього пункту відновлює вікно зі старими налаштуванням.">
 <!ENTITY Ctr_e_omtc			"OMTC / проблеми завислих вкладок">
 <!ENTITY Ctr_e_searchui		"Вигляд панелі Пошук">
 <!ENTITY Ctr_e_loop			"Виклик та сеанс зв’язку">
@@ -272,13 +272,13 @@
 <!ENTITY Ctr_pw_settings	"Налаштування">
 <!ENTITY Ctr_pw_set_reset	"Скинути налаштування">
 <!ENTITY Ctr_pw_set_predef	"Класичні налаштунки">
-<!ENTITY Ctr_pw_set_preaus	"&browserName; налаштунок">
+<!ENTITY Ctr_pw_set_preaus	"&brandShortName; налаштунок">
 <!ENTITY Ctr_pw_set_export	"Експорт налаштувань">
 <!ENTITY Ctr_pw_set_import	"Імпорт налаштувань">
 
 <!ENTITY Ctr_special_font	"Налаштування кольору тла - тільки для типової теми!">
 <!ENTITY Ctr_special_info	"Деякі параметри не можуть запропонувати візуальні зміни в усіх випадках">
-<!ENTITY Ctr_special_info2	"Налаштування зроблені для типової теми &browserName; і не можуть працювати з усіма сторонніми темами!">
+<!ENTITY Ctr_special_info2	"Налаштування зроблені для типової теми &brandShortName; і не можуть працювати з усіма сторонніми темами!">
 <!ENTITY Ctr_support		"Форум підтримки">
 <!ENTITY Ctr_newversion		"Нова версія?">
 
