--- a/xpi/locale/es/options.dtd
+++ b/xpi/locale/es/options.dtd
@@ -93,7 +93,7 @@
 <!ENTITY Ctr_appbuttonI1	"Se recomienda reiniciar">
 <!ENTITY Ctr_appbuttonI1e	"¡No es visible en la barra de título de SO de Windows, sólo en la barra de título de &brandShortName;!">
 <!ENTITY Ctr_appbuttonI2	"¡Los colores del botón sólo son visibles en la barra de título y la barra de pestañas!">
-<!ENTITY Ctr_alttbappb		"Iconos alternativos sin flecha">
+<!ENTITY Ctr_alttbappb		"Iconos alternativos">
 <!ENTITY Ctr_appbutmhi		"Posición más alta (si está en la barra de pestañas)">
 <!ENTITY Ctr_appbutbdl		"Ocultar bordes y colores de fondo">
 <!ENTITY Ctr_dblclclosefx	"El doble clic cierra la ventana actual">
