--- a/xpi/locale/es/options.dtd
+++ b/xpi/locale/es/options.dtd
@@ -261,11 +261,13 @@
 <!ENTITY Ctr_fx34loop		"&brandShortName; 34+ introdujo características de 'llamada y conversación'. Desmarcar esto las retira.">
 <!ENTITY Ctr_fx35devtheme	"&brandShortName; 35+ introdujo un nuevo 'tema de decoración de desarrollador'. Desmarcar estas preferencias deshabilita el 'tema de desarrollador' y su botón en el modo Personalizar.">
 <!ENTITY Ctr_fx36prefs		"&brandShortName; 36+ introdujo las Opciones (about:preferences) en una pestaña. Desmarcar esta preferencia restaura la antigua ventana de Opciones.">
+<!ENTITY Ctr_fx38reader		"&brandShortName; 38+ introduced a new 'reader mode'. Unchecking this preferences disables it and removes its icon from location bar.">
 <!ENTITY Ctr_e_omtc			"OMTC / problema de cuelgue de pestañas">
 <!ENTITY Ctr_e_searchui		"Aspecto de la búsqueda">
 <!ENTITY Ctr_e_loop			"Llamada y conversación">
 <!ENTITY Ctr_e_deved		"Tema de decoración de la edición de desarrollador">
 <!ENTITY Ctr_e_prefsui		"Preferencias en la pestaña">
+<!ENTITY Ctr_e_readermode	"Reader mode">
 
 
 <!ENTITY Ctr_pw_settings	"Configuración">
