--- a/xpi/locale/es/options.dtd
+++ b/xpi/locale/es/options.dtd
@@ -211,6 +211,7 @@
 <!ENTITY Ctr_dblclnewtab	"El doble clic abre una 'nueva' pestaña (about:config >> browser.newtab.url)">
 <!ENTITY Ctr_hidetbwot		"Ocultar barra de pestañas con una sola pestaña">
 <!ENTITY Ctr_hidetbwote		"Reducir retardo al ocultar en el inicio">
+<!ENTITY Ctr_hidetbwote_i	"Could cause glitches on tabs toolbar">
 <!ENTITY Ctr_hidetbwote2	"Conservar barra de título (pestañas arriba)">
 <!ENTITY Ctr_notabfog		"Eliminar niebla de fondo (Windows Aeroglass/8)">
 <!ENTITY Ctr_notabbg		"Eliminar color de fondo (Windows AeroGlass/8)">
@@ -233,6 +234,7 @@
 <!ENTITY Ctr_hidesbclose	"Barras laterales: Ocultar botón cerrar de la barra lateral">
 <!ENTITY Ctr_notextshadow	"Barras de herramientas: Ocultar sombra para texto de barra de herramientas y texto de pestaña">
 <!ENTITY Ctr_chevronfix		"Barra de herramientas de navegación: Ocultar doble flecha (chevron) al final de las barras de herramientas">
+<!ENTITY Ctr_tbsep_winc		"Top toolbars: additional toolbar separators">
 
 <!ENTITY Ctr_closeabarbut	"Ocultar botón cerrar de barras de complementos">
 <!ENTITY Ctr_highaddonsbar	"Incrementar altura">
