--- a/xpi/locale/el/options.dtd
+++ b/xpi/locale/el/options.dtd
@@ -211,6 +211,7 @@
 <!ENTITY Ctr_dblclnewtab	"Άνοιγμα νέας καρτέλας με διπλό κλικ (χρήση browser.newtab.url)">
 <!ENTITY Ctr_hidetbwot		"Απόκρυψη εργαλειοθήκης καρτελών με μία ορατή καρτέλα">
 <!ENTITY Ctr_hidetbwote		"Μείωση καθυστέρησης απόκρυψης κατά την εκκίνηση">
+<!ENTITY Ctr_hidetbwote_i	"Could cause glitches on tabs toolbar">
 <!ENTITY Ctr_hidetbwote2	"Keep titlebar (tabs on top)">
 <!ENTITY Ctr_notabfog		"Αφαίρεση ομίχλης φόντου (Windows AeroGlass/8)">
 <!ENTITY Ctr_notabbg		"Αφαίρεση χρώματος φόντου (Windows AeroGlass/8)">
@@ -233,6 +234,7 @@
 <!ENTITY Ctr_hidesbclose	"Πλευρικές στήλες: απόκρυψη κουμπιού κλεισίματος πλευρικής στήλης">
 <!ENTITY Ctr_notextshadow	"Toolbars: hide shadow for toolbar text and tab text">
 <!ENTITY Ctr_chevronfix		"Εργαλειοθήκη πλοήγησης: απόκρυψη διπλού βέλους («σιρίτι») στο τέλος της εργαλειοθήκης">
+<!ENTITY Ctr_tbsep_winc		"Top toolbars: additional toolbar separators">
 
 <!ENTITY Ctr_closeabarbut	"Απόκρυψη κουμπιού κλεισίματος εργαλειοθήκης πρόσθετων">
 <!ENTITY Ctr_highaddonsbar	"Αύξηση ύψους">
