--- a/xpi/locale/it/options.dtd
+++ b/xpi/locale/it/options.dtd
@@ -211,6 +211,7 @@
 <!ENTITY Ctr_dblclnewtab	"Doppio clic del mouse per aprire una nuova scheda">
 <!ENTITY Ctr_hidetbwot		"Nascondi la barra delle schede quando è aperta una sola scheda">
 <!ENTITY Ctr_hidetbwote		"Riduci il ritardo di scomparsa all'avvio">
+<!ENTITY Ctr_hidetbwote_i	"Could cause glitches on tabs toolbar">
 <!ENTITY Ctr_hidetbwote2	"Keep titlebar (tabs on top)">
 <!ENTITY Ctr_notabfog		"Disattiva l’effetto nebbia (Windows AeroGlass e Win8)">
 <!ENTITY Ctr_notabbg		"Rimuovi colore di sfondo (Windows AeroGlass e Win8)">
@@ -233,6 +234,7 @@
 <!ENTITY Ctr_hidesbclose	"Barre laterali: nascondi il pulsante di chiusura della barra laterale">
 <!ENTITY Ctr_notextshadow	"Toolbars: hide shadow for toolbar text and tab text">
 <!ENTITY Ctr_chevronfix		"Barra di navigazione: nascondi la doppia freccia ('chevron') all'estremità delle barre">
+<!ENTITY Ctr_tbsep_winc		"Top toolbars: additional toolbar separators">
 
 <!ENTITY Ctr_closeabarbut	"Nascondi il pulsante di chiusura">
 <!ENTITY Ctr_highaddonsbar	"Aumenta l’altezza">
